Correct style of nav on mobile screen and start nav script.

--- a/style-header.css
+++ b/style-header.css
@@ -1,8 +1,4 @@
 nav {
-    position: relative;
-
-    z-index: 1;
-
     padding: 2.5% 10%;
 
     max-width: 2016px;
@@ -38,37 +34,25 @@ nav {
 
     outline: 3px solid var(--clr-primary-soft-red);
 }
+
+
 #nav-menu-mobile {
     display: none;
-
-    position: absolute;
-
-    top: 100%;
-    left: 50%;
-
-    transform: translate(-50%, 0);
-
+    
     width: 100%;
+
     height: 100%;
 }
 #nav-menu-mobile div {
     display: flex;
     justify-content: space-between;
-
-
-    padding: 2.5% 10%;
-    opacity: 0.9;
 }
 #hamburger {
     background-color: rgba(255, 255, 255, 0);
     border-width: 0;
 }
 #nav-menu-list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    padding-bottom: 25% !important;
+    margin-top: 5%;
 }
 ul {
     list-style: none;
@@ -82,12 +66,15 @@ ul {
 }
 .horizontal-list-bar {
     padding: 0 !important;
-    height: 1px;
+
+    height: 2px;
+
     background-color: var(--clr-neutral-grayish-blue) !important;
 }
 li {
     display: flex;
     justify-content: center;
+
     margin: 5% 0;
     width: 100%;
 }
@@ -108,12 +95,10 @@ li a {
 }
 #social-media-nav {
     justify-content: center !important;
+
     gap: 10%;
 }
 @media only screen and (max-width: 768px) {
-    nav {
-        padding: 0;
-    }
     #nav-menu-desktop {
         display: none;
     }
