--- a/style-main.css
+++ b/style-main.css
@@ -159,7 +159,7 @@ h2 {
 }
 .horizontal-bar {
     width: 100%;
-    height: 1px;
+    height: 2px;
 
     background-color: var(--clr-neutral-grayish-blue);
 }
@@ -266,7 +266,7 @@ h2 {
         display: block;
 
         width: 100%;
-        height: 1px;
+        height: 2px;
 
         background-color: var(--clr-neutral-grayish-blue);
     }
